[package]
name = "to-do-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde_json = "1.0.86"
home = "0.5.4"
anyhow = "1.0.65"

[dependencies.chrono]
features = ["serde"]
version = "0.4.22"

[dependencies.serde]
features = ["derive"]
version = "1.0.145"